# tsp-experiments

./: .gitignore  README.md  batch_plot_all.py  create_labeled_tsps.py  gemini.py  get_different_numbers.py  graph_optimality.py  graph_tokens.py  llama.py  plot_tsp_labels.py  plot_tsp_png_labels.py  plot_tsp_svg_labels.py  problem_metadata.csv  pyproject.toml  verify_tsp_solution.py
analysis/: METRICS.md  analyze_all.py  compare_models.py  create_plots.py
api-scripts/: call_claude_api.py  call_gemini_api.py  call_openai_api.py  parse_api_clusters.py  parse_api_solutions.py
optimal-tsps/: 05b013ef-724d-407f-9591-18a4103b8040  0fed7bdc-a343-4966-b202-69661c45fdb2  1527135d-c248-4f89-89ed-6a90fd52a3c9  154207c9-e80a-40d6-9644-9d60a8d430c2  164185da-3473-46e4-87ca-f4830fe222fd  183e1414-fcdb-4d3b-840c-b649bdd620ff  1898a77c-bccd-49eb-bfb4-06bbac8550bc  19ee29b6-b6f8-4e8d-9a7f-1e721e51d336  238a8f7d-e7b1-46bf-bfc2-b750613b470f  2549fb3d-39ec-4ed0-86af-bb0f2f473e68  33484525-a992-44ad-90a6-af937fe1c337  34839dd1-7558-4cbf-a9a7-4a5af5610fab  36b03dde-243e-4028-b4a7-447b39e59ff6  383daefc-a307-4624-b00a-8abf8b02ffbe  3c61df79-3f08-446e-a753-cd497be9ba96  453b1819-3246-4ffd-b01d-203e2225113a  45de72b4-fb51-4d40-a516-2bf6d4c6b1d9  53a74dac-9a9e-4859-91d0-28160eb5e36c  53b26982-d905-4128-8b13-964e0a3defeb  57323239-abc1-4048-88ef-016ebf22312f  5962d267-4866-4b2b-b6d6-9e1326bb36ca  59b1b6b9-b85f-4fde-9150-d47a236df9a2  5d302750-f5a2-4ee6-85c5-c11e674abf39  6292163d-4352-46c0-b64e-f2310419873b  6427c4a4-177d-4e0d-83af-77ec2c7d5ec9  64fe8b42-0e8f-43e7-8476-3b56e2cf2b92  (+46 more)
(+925 files in other folders)
