[project]
name = "tsp-experiments"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "matplotlib>=3.10.7",
    "numpy>=2.3.5",
    "scipy>=1.11.0",
    "pandas>=2.0.0",
    "anthropic>=0.39.0",
    "openai>=1.0.0",
    "cairosvg>=2.8.2",
    "google-genai>=1.55.0",
]
